@@ -1,10 +1,8 @@
 package com.tracker.config;
 
-import com.tracker.config.jwt.JwtTokenProvider;
 import com.tracker.config.keycloak.KeycloakRealmRoleConverter;
 import com.tracker.config.keycloak.UsernameSubClaimAdapter;
 import com.tracker.service.UserService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.actuate.autoconfigure.security.servlet.EndpointRequest;
 import org.springframework.boot.actuate.context.ShutdownEndpoint;
 import org.springframework.boot.actuate.metrics.export.prometheus.PrometheusScrapeEndpoint;
@@ -14,12 +12,12 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
-import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
+import org.springframework.security.authentication.ProviderManager;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.builders.WebSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.oauth2.core.DelegatingOAuth2TokenValidator;
@@ -27,6 +25,8 @@ import org.springframework.security.oauth2.core.OAuth2TokenValidator;
 import org.springframework.security.oauth2.core.OAuth2TokenValidatorResult;
 import org.springframework.security.oauth2.jwt.*;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
+import org.springframework.security.oauth2.server.resource.web.access.BearerTokenAccessDeniedHandler;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.HttpStatusEntryPoint;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
@@ -37,92 +37,87 @@ import java.util.List;
 import java.util.Set;
 
 import static java.util.Arrays.stream;
-import static java.util.stream.Collectors.toList;
+import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration
 @EnableWebSecurity
-@EnableGlobalMethodSecurity(prePostEnabled = true)
-public class SecurityConfig extends WebSecurityConfigurerAdapter {
+@EnableMethodSecurity
+public class SecurityConfig {
 
     private static final Set<String> ALLOWED_HEADERS =
             Set.of("X-Requested-With", "Origin", "Content-Type", "Accept", "Authorization");
 
     private static final String[] AUTH_WHITELIST = {
             // -- swagger ui
-            "/v2/api-docs",
-            "/config/ui",
-            "/swagger-resources/**",
-            "/config/**",
-            "/swagger-ui.html",
-            "/webjars/**"
+            "/v3/api-docs/**",
+            "/v3/api-docs.yaml",
+            "/swagger-ui/**",
+            "/swagger-ui.html"
             // other public endpoints
     };
 
     private final UserService userDetailsService;
     private final PasswordEncoder passwordEncoder;
-    private final JwtTokenProvider jwtTokenProvider;
     private final String corsOrigins;
 
-    @Autowired
-    public SecurityConfig(UserService userDetailsService, PasswordEncoder passwordEncoder, JwtTokenProvider jwtTokenProvider, FinanceTrackerProperties financeTrackerProperties) {
+    public SecurityConfig(UserService userDetailsService, PasswordEncoder passwordEncoder,
+                          FinanceTrackerProperties financeTrackerProperties) {
         this.userDetailsService = userDetailsService;
         this.passwordEncoder = passwordEncoder;
-        this.jwtTokenProvider = jwtTokenProvider;
         this.corsOrigins = financeTrackerProperties.getCorsOrigins();
     }
 
     @Bean
-    @Override
-    public AuthenticationManager authenticationManagerBean() throws Exception {
-        return super.authenticationManagerBean();
+    public AuthenticationManager authenticationManager() {
+         var daoAuthenticationProvider = new DaoAuthenticationProvider();
+         daoAuthenticationProvider.setUserDetailsService(userDetailsService);
+         daoAuthenticationProvider.setPasswordEncoder(passwordEncoder);
+         return new ProviderManager(daoAuthenticationProvider);
     }
 
-    @Override
-    protected void configure(AuthenticationManagerBuilder auth) throws Exception {
-        auth.userDetailsService(userDetailsService)
-                .passwordEncoder(passwordEncoder);
-    }
-
-    @Override
-    public void configure(WebSecurity web) {
-        web.ignoring().antMatchers(AUTH_WHITELIST);
-    }
-
-    @Override
-    protected void configure(HttpSecurity http) throws Exception {
+    @Bean
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .authorizeRequests(authorizeRequests -> authorizeRequests
-                        .requestMatchers(EndpointRequest.to(ShutdownEndpoint.class))
-                            .hasRole("ADMIN")
-                        .requestMatchers(EndpointRequest.toAnyEndpoint().excluding(PrometheusScrapeEndpoint.class))
-                            .permitAll()
-                        .antMatchers("/users/register", "/authenticate", "/users/{username}")
-                            .permitAll()
-                        .anyRequest().authenticated()
-                )
-                // Validate tokens through configured OpenID Provider
-                .oauth2ResourceServer(oAuth2ResourceServer ->
-                        oAuth2ResourceServer
-                                .jwt().jwtAuthenticationConverter(jwtAuthenticationConverter())
-                )
-                .sessionManagement(sessionManagement ->
-                        sessionManagement.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
-                .exceptionHandling(exceptionHandling ->
-                        exceptionHandling
-                                .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED))
-                )
-                .csrf().disable()
-                .cors();
+            .authorizeHttpRequests(authorizeRequests -> authorizeRequests
+                    .requestMatchers(EndpointRequest.to(ShutdownEndpoint.class))
+                        .hasRole("ADMIN")
+                    .requestMatchers(EndpointRequest.toAnyEndpoint().excluding(PrometheusScrapeEndpoint.class))
+                        .permitAll()
+                    .requestMatchers("/users/register", "/authenticate", "/users/{username}")
+                        .permitAll()
+                    .requestMatchers(AUTH_WHITELIST)
+                        .permitAll()
+                    .anyRequest().authenticated())
+            .sessionManagement(sessionManagement ->
+                    sessionManagement.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            // Validate tokens through configured OpenID Provider
+            .oauth2ResourceServer(oAuth2ResourceServer -> oAuth2ResourceServer
+                    .jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter()))
+            )
+            .exceptionHandling(exceptionHandling -> exceptionHandling
+//                        .authenticationEntryPoint(new BearerTokenAuthenticationEntryPoint())
+                    .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED))
+                    .accessDeniedHandler(new BearerTokenAccessDeniedHandler())
+            )
+            .csrf(AbstractHttpConfigurer::disable)
+            .cors(withDefaults());
 //              Custom AuthenticationFilter
-//                .addFilterBefore(new JwtAuthorizationFilter(jwtTokenProvider), UsernamePasswordAuthenticationFilter.class)
+//              .addFilterBefore(new JwtAuthorizationFilter(jwtTokenProvider), UsernamePasswordAuthenticationFilter.class);
+
+        return http.build();
     }
+
+//    @Bean
+//    public JwtAuthorizationFilter jwtAuthorizationFilter() {
+//        Use new .oauth2ResourceServer(OAuth2ResourceServerConfigurer::jwt)
+//        return new JwtAuthorizationFilter(jwtTokenProvider);
+//    }
 
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         List<String> allowedMethods = stream(HttpMethod.values())
-                .map(Enum::name)
-                .collect(toList());
+                .map(HttpMethod::name)
+                .toList();
 
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(List.of(corsOrigins));
@@ -138,7 +133,7 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
     @Bean
     public JwtDecoder jwtDecoderByIssuerUri(OAuth2ResourceServerProperties properties) {
         String issuerUri = properties.getJwt().getIssuerUri();
-        NimbusJwtDecoder jwtDecoder = (NimbusJwtDecoder) JwtDecoders.fromOidcIssuerLocation(issuerUri);
+        NimbusJwtDecoder jwtDecoder = JwtDecoders.fromOidcIssuerLocation(issuerUri);
 
         //TODO: fix issuer problem in docker/k8s
         OAuth2TokenValidator<Jwt> customIssuerValidator = (Jwt token) -> OAuth2TokenValidatorResult.success();
@@ -159,8 +154,4 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
         return jwtAuthenticationConverter;
     }
 
-//    @Bean
-//    public JwtAuthorizationFilter jwtAuthorizationFilter() {
-//        return new JwtAuthorizationFilter(jwtTokenProvider);
-//    }
 }
