@@ -1,15 +1,13 @@
 package com.tracker.common;
 
-import com.tracker.common.exception.ApiError;
+import jakarta.persistence.EntityNotFoundException;
+import jakarta.validation.ConstraintViolationException;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.TypeMismatchException;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.*;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.springframework.validation.BindException;
 import org.springframework.validation.BindingResult;
-import org.springframework.validation.ObjectError;
 import org.springframework.web.HttpMediaTypeNotSupportedException;
 import org.springframework.web.HttpRequestMethodNotSupportedException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -22,14 +20,13 @@ import org.springframework.web.multipart.support.MissingServletRequestPartExcept
 import org.springframework.web.servlet.NoHandlerFoundException;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
-import javax.persistence.EntityNotFoundException;
-import javax.validation.ConstraintViolationException;
-import java.time.LocalDateTime;
+import java.time.Instant;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
 
 import static java.util.stream.Collectors.toList;
+import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 
 /**
  * GlobalExceptionHandler
@@ -43,12 +40,12 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
      *
      * @param ex      {@link Throwable}
      * @param request {@link WebRequest}
-     * @return {@link ResponseEntity} with {@link HttpStatus#INTERNAL_SERVER_ERROR} and {@link ApiError}
+     * @return {@link ResponseEntity} with {@link HttpStatus#INTERNAL_SERVER_ERROR} and {@link ProblemDetail}
      */
     @ExceptionHandler(Throwable.class)
-    public ResponseEntity<ApiError> globalExceptionHandler(Throwable ex, WebRequest request) {
+    public ResponseEntity<ProblemDetail> globalExceptionHandler(Throwable ex, WebRequest request) {
         log.error(ex.getMessage(), ex);
-        return buildResponseEntity(HttpStatus.INTERNAL_SERVER_ERROR, List.of(ex.getLocalizedMessage()), request);
+        return buildResponseEntity(HttpStatus.INTERNAL_SERVER_ERROR, List.of(ex.getLocalizedMessage()));
     }
 
     /**
@@ -56,12 +53,12 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
      *
      * @param ex      {@link Exception}
      * @param request {@link WebRequest}
-     * @return {@link ResponseEntity} with {@link HttpStatus#CONFLICT} and {@link ApiError}
+     * @return {@link ResponseEntity} with {@link HttpStatus#BAD_REQUEST} and {@link ProblemDetail}
      */
     @ExceptionHandler({IllegalArgumentException.class, IllegalStateException.class})
-    public ResponseEntity<ApiError> entityAlreadyExistHandler(Exception ex, WebRequest request) {
+    public ResponseEntity<ProblemDetail> entityAlreadyExistHandler(Exception ex, WebRequest request) {
         log.error(ex.getMessage(), ex);
-        return buildResponseEntity(HttpStatus.BAD_REQUEST, List.of(ex.getLocalizedMessage()), request);
+        return buildResponseEntity(HttpStatus.BAD_REQUEST, List.of(ex.getLocalizedMessage()));
     }
 
     /**
@@ -69,133 +66,126 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
      *
      * @param ex      {@link Exception}
      * @param request {@link WebRequest}
-     * @return {@link ResponseEntity} with {@link HttpStatus#NOT_FOUND} and {@link ApiError}
+     * @return {@link ResponseEntity} with {@link HttpStatus#NOT_FOUND} and {@link ProblemDetail}
      */
     @ExceptionHandler({UsernameNotFoundException.class, NoSuchElementException.class, EntityNotFoundException.class})
-    public ResponseEntity<ApiError> entityNotFoundHandler(Exception ex, WebRequest request) {
+    public ResponseEntity<ProblemDetail> entityNotFoundHandler(Exception ex, WebRequest request) {
         log.warn(ex.getMessage(), ex);
-        return buildResponseEntity(HttpStatus.NOT_FOUND, List.of(ex.getLocalizedMessage()), request);
+        return buildResponseEntity(HttpStatus.NOT_FOUND, List.of(ex.getLocalizedMessage()));
     }
 
     //400
     @ExceptionHandler({MethodArgumentTypeMismatchException.class})
-    public ResponseEntity<ApiError> handleMethodArgumentTypeMismatch(MethodArgumentTypeMismatchException ex, WebRequest request) {
+    public ResponseEntity<ProblemDetail> handleMethodArgumentTypeMismatch(MethodArgumentTypeMismatchException ex, WebRequest request) {
         String requiredType = Optional.ofNullable(ex.getRequiredType())
                 .map(clazz -> ex.getRequiredType().getSimpleName())
                 .orElse("");
 
         String error = ex.getName() + " should be of type " + requiredType;
+        ProblemDetail problemDetail = buildProblemDetailWithDetail(HttpStatus.BAD_REQUEST, error, List.of(error));
 
-        return buildResponseEntity(HttpStatus.BAD_REQUEST, List.of(error), request);
+        return buildResponseEntity(HttpStatus.BAD_REQUEST, problemDetail);
     }
 
     @ExceptionHandler({ConstraintViolationException.class})
-    public ResponseEntity<ApiError> handleConstraintViolation(ConstraintViolationException ex, WebRequest request) {
+    public ResponseEntity<ProblemDetail> handleConstraintViolation(ConstraintViolationException ex, WebRequest request) {
         logger.info(ex.getClass().getName());
 
         List<String> errors = ex.getConstraintViolations().stream()
                 .map(violation -> violation.getRootBeanClass().getName() + " " + violation.getPropertyPath() + ": " + violation.getMessage())
-                .collect(toList());
+                .toList();
 
-        return buildResponseEntity(HttpStatus.BAD_REQUEST, errors, request);
+        return buildResponseEntity(HttpStatus.BAD_REQUEST, errors);
     }
 
     @Override
     protected ResponseEntity<Object> handleTypeMismatch(TypeMismatchException ex, HttpHeaders headers,
-                                                        HttpStatus status, WebRequest request) {
+                                                        HttpStatusCode status, WebRequest request) {
         logger.info(ex.getClass().getName());
 
         String error = ex.getValue() + " value for " + ex.getPropertyName() + " should be of type " + ex.getRequiredType();
-        ApiError apiError = buildApplicationException(request, List.of(error));
+        ProblemDetail problemDetail = buildProblemDetailWithDetail(HttpStatus.BAD_REQUEST, error, List.of(error));
 
-        return handleExceptionInternal(ex, apiError, headers, HttpStatus.BAD_REQUEST, request);
+        return handleExceptionInternal(ex, problemDetail, headers, HttpStatus.BAD_REQUEST, request);
     }
-
 
     @Override
     protected ResponseEntity<Object> handleMissingServletRequestPart(MissingServletRequestPartException ex,
-                                                                     HttpHeaders headers, HttpStatus status, WebRequest request) {
+                                                                     HttpHeaders headers, HttpStatusCode status, WebRequest request) {
         logger.info(ex.getClass().getName());
 
         String error = ex.getRequestPartName() + " part is missing";
-        ApiError apiError = buildApplicationException(request, List.of(error));
+        ProblemDetail problemDetail = fillProblemDetail(ex.getBody(), List.of(error));
 
-        return handleExceptionInternal(ex, apiError, headers, HttpStatus.BAD_REQUEST, request);
+        return handleExceptionInternal(ex, problemDetail, headers, HttpStatus.BAD_REQUEST, request);
     }
 
     @Override
     protected ResponseEntity<Object> handleMissingServletRequestParameter(MissingServletRequestParameterException ex,
-                                                                          HttpHeaders headers, HttpStatus status, WebRequest request) {
+                                                                          HttpHeaders headers, HttpStatusCode status, WebRequest request) {
         logger.info(ex.getClass().getName());
 
         String error = ex.getParameterName() + " parameter is missing";
-        ApiError apiError = buildApplicationException(request, List.of(error));
+        ProblemDetail problemDetail = fillProblemDetail(ex.getBody(), List.of(error));
 
-        return handleExceptionInternal(ex, apiError, headers, HttpStatus.BAD_REQUEST, request);
+        return handleExceptionInternal(ex, problemDetail, headers, HttpStatus.BAD_REQUEST, request);
     }
-
 
     @Override
     protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex, HttpHeaders headers,
-                                                                  HttpStatus status, WebRequest request) {
-
-        List<String> errors = extractErrorMessages(ex.getBindingResult());
-        ApiError apiError = buildApplicationException(request, errors);
-
-        return handleExceptionInternal(ex, apiError, headers, HttpStatus.BAD_REQUEST, request);
-    }
-
-    @Override
-    protected ResponseEntity<Object> handleBindException(BindException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
+                                                                  HttpStatusCode status, WebRequest request) {
         logger.info(ex.getClass().getName());
-
         List<String> errors = extractErrorMessages(ex.getBindingResult());
-        ApiError apiError = buildApplicationException(request, errors);
 
-        return handleExceptionInternal(ex, apiError, headers, HttpStatus.BAD_REQUEST, request);
+        ProblemDetail problemDetail = fillProblemDetail(ex.getBody(), errors);
+
+        return handleExceptionInternal(ex, problemDetail, headers, HttpStatus.BAD_REQUEST, request);
     }
 
     // 404
     @Override
-    protected ResponseEntity<Object> handleNoHandlerFoundException(NoHandlerFoundException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
+    protected ResponseEntity<Object> handleNoHandlerFoundException(NoHandlerFoundException ex, HttpHeaders headers, HttpStatusCode status, WebRequest request) {
         logger.info(ex.getClass().getName());
         String error = "No handler found for " + ex.getHttpMethod() + " " + ex.getRequestURL();
-        ApiError apiError = buildApplicationException(request, List.of(error));
 
-        return handleExceptionInternal(ex, apiError, headers, HttpStatus.NOT_FOUND, request);
+        ProblemDetail problemDetail = fillProblemDetail(ex.getBody(), List.of(error));
+
+        return handleExceptionInternal(ex, problemDetail, headers, HttpStatus.NOT_FOUND, request);
     }
 
     // 405
     @Override
-    protected ResponseEntity<Object> handleHttpRequestMethodNotSupported(HttpRequestMethodNotSupportedException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
+    protected ResponseEntity<Object> handleHttpRequestMethodNotSupported(HttpRequestMethodNotSupportedException ex,
+                                                                         HttpHeaders headers, HttpStatusCode status, WebRequest request) {
         logger.info(ex.getClass().getName());
 
-        String str = ex.getMethod() + " method is not supported for this request. Supported methods are ";
-        StringBuilder sb = new StringBuilder(str);
+        String detail = ex.getMethod() + " method is not supported for this request. Supported methods are: ";
+        StringBuilder sb = new StringBuilder(detail);
 
         Optional.ofNullable(ex.getSupportedHttpMethods())
-                .ifPresent(httpMethods ->
-                        httpMethods.forEach(t -> sb.append(t).append(" "))
-                );
+                .ifPresent(httpMethods -> httpMethods.forEach(t -> sb.append(t).append(" ")));
 
-        ApiError apiError = buildApplicationException(request, List.of(sb.toString()));
-        return handleExceptionInternal(ex, apiError, headers, HttpStatus.METHOD_NOT_ALLOWED, request);
+        ProblemDetail problemDetail = buildProblemDetailWithDetail(HttpStatus.METHOD_NOT_ALLOWED, detail, List.of(sb.toString()));
+
+        return handleExceptionInternal(ex, problemDetail, headers, HttpStatus.METHOD_NOT_ALLOWED, request);
     }
 
     // 415
     @Override
-    protected ResponseEntity<Object> handleHttpMediaTypeNotSupported(HttpMediaTypeNotSupportedException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
+    protected ResponseEntity<Object> handleHttpMediaTypeNotSupported(HttpMediaTypeNotSupportedException ex,
+                                                                     HttpHeaders headers, HttpStatusCode status, WebRequest request) {
         logger.info(ex.getClass().getName());
 
-        String str = ex.getContentType() + " media type is not supported. Supported media types are ";
-        StringBuilder sb = new StringBuilder(str);
+        String error = ex.getContentType() + " media type is not supported. Supported media types are ";
+        StringBuilder sb = new StringBuilder(error);
 
         ex.getSupportedMediaTypes()
                 .forEach(t -> sb.append(t).append(" "));
 
-        ApiError apiError = buildApplicationException(request, List.of(sb.substring(0, sb.length() - 2)));
+        ProblemDetail problemDetail = buildProblemDetailWithDetail(HttpStatus.UNSUPPORTED_MEDIA_TYPE, error,
+                List.of(sb.substring(0, sb.length() - 2)));
 
-        return handleExceptionInternal(ex, apiError, headers, HttpStatus.UNSUPPORTED_MEDIA_TYPE, request);
+        return handleExceptionInternal(ex, problemDetail, headers, HttpStatus.UNSUPPORTED_MEDIA_TYPE, request);
     }
 
     /**
@@ -210,40 +200,51 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
                 .map(e -> e.getField() + ": " + e.getDefaultMessage())
                 .collect(toList());
 
-        for (ObjectError error : bindingResult.getGlobalErrors()) {
-            errors.add(error.getObjectName() + ": " + error.getDefaultMessage());
-        }
+        bindingResult.getGlobalErrors().forEach(error ->
+                errors.add(error.getObjectName() + ": " + error.getDefaultMessage()));
 
         return errors;
     }
 
     /**
-     * Builds ResponseEntity with given {@link HttpStatus} and {@link ApiError}.
-     * See also {@link #buildApplicationException(WebRequest, List)}.
+     * Builds ResponseEntity with given {@link HttpStatus} and {@link ProblemDetail}.
      *
      * @param httpStatus    {@link HttpStatus}
-     * @param errorMessages {@link Throwable}
-     * @param request       {@link WebRequest}
+     * @param errorMessages errors
      * @return {@link ResponseEntity}
      */
-    private ResponseEntity<ApiError> buildResponseEntity(HttpStatus httpStatus, List<String> errorMessages, WebRequest request) {
-        return ResponseEntity
-                .status(httpStatus)
-                .body(buildApplicationException(request, errorMessages));
+    private ResponseEntity<ProblemDetail> buildResponseEntity(HttpStatus httpStatus, List<String> errorMessages) {
+        ProblemDetail problemDetail = ProblemDetail.forStatus(httpStatus);
+        fillProblemDetail(problemDetail, errorMessages);
+        return buildResponseEntity(httpStatus, problemDetail);
     }
 
     /**
-     * Build exception details.
+     * Builds ResponseEntity with given {@link HttpStatus} and {@link ProblemDetail}.
      *
-     * @param request       {@link WebRequest}
-     * @param errorMessages the error messages
-     * @return the exception details
+     * @param httpStatus    {@link HttpStatus}
+     * @param problemDetail {@link ProblemDetail}
+     * @return {@link ResponseEntity}
      */
-    private ApiError buildApplicationException(WebRequest request, List<String> errorMessages) {
-        return ApiError.builder()
-                .timestamp(LocalDateTime.now())
-                .errorMessages(errorMessages)
-                .path(request.getDescription(false))
-                .build();
+    private ResponseEntity<ProblemDetail> buildResponseEntity(HttpStatus httpStatus, ProblemDetail problemDetail) {
+        return ResponseEntity.status(httpStatus)
+                .body(problemDetail);
     }
+
+    private ProblemDetail buildProblemDetailWithDetail(HttpStatus status, String detail, List<String> errorMessages) {
+        ProblemDetail problemDetail = StringUtils.isNotBlank(detail) ? ProblemDetail.forStatusAndDetail(status, detail)
+                : ProblemDetail.forStatus(status);
+
+        return fillProblemDetail(problemDetail, errorMessages);
+    }
+
+    private ProblemDetail fillProblemDetail(ProblemDetail problemDetail, List<String> errors) {
+        problemDetail.setProperty("timestamp", Instant.now());
+        if (isNotEmpty(errors)) {
+            problemDetail.setProperty("errors", errors);
+        }
+
+        return problemDetail;
+    }
+
 }
